--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   <!-- Local javascript -->
   <script src="assets/js/questions.js" type="text/javascript"></script>
-  <script src="assets/js/functions.js" type="text/javascript"></script>
+  <script src="assets/js/objects.js" type="text/javascript"></script>
   <script src="assets/js/main.js" type="text/javascript"></script>
 
 </body>
