--- a/index.html
+++ b/index.html
@@ -13,10 +13,18 @@
 </head>
 
 <body>
-  <h1>TRIVIA GAME</h1>
+  <div class="container">
 
-  <div id="game-board" class="">
-    <button id="start" type="button" name="button">START!</button>
+    <h1>TRIVIA GAME</h1>
+
+    <div id="show-timer"></div>
+
+    <div id="game-board" class="">
+
+      <button id="start" type="button" name="button">START!</button>
+
+
+    </div>
 
   </div>
 
@@ -26,8 +34,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   <!-- Local javascript -->
   <script src="assets/js/questions.js" type="text/javascript"></script>
-  <script src="assets/js/objects.js" type="text/javascript"></script>
   <script src="assets/js/main.js" type="text/javascript"></script>
+  <script src="assets/js/objects.js" type="text/javascript"></script>
 
 </body>
 
