--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>trivia game</title>
+  <title>Lord of the Rings Trivia</title>
 
   <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
@@ -15,15 +15,19 @@
 <body>
   <div class="container">
 
-    <h1>TRIVIA GAME</h1>
+    <div class="header">
+      <div class="row">
+        <h1 class="col-sm-6">Lord of the Rings Trivia</h1>
+        <h1 id="show-timer" class="col-sm-6"></h1>
 
-    <div id="show-timer"></div>
+      </div>
+    </div>
 
-    <div id="game-board" class="">
+    <div class="row">
+      <div id="game-board" class="col-sm-6">
+        <button id="start" type="button" name="button">START!</button>
 
-      <button id="start" type="button" name="button">START!</button>
-
-
+      </div>
     </div>
 
   </div>
@@ -32,6 +36,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+
   <!-- Local javascript -->
   <script src="assets/js/questions.js" type="text/javascript"></script>
   <script src="assets/js/main.js" type="text/javascript"></script>
